Kinda fixed Vaadin hot changes